# trimarr

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/cli/: main.py
src/core/: __init__.py  logging.py
src/utils/: utils.py
